--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@ btn.addEventListener('click', async () => {
 })
 
 // global state store with nanostores.
-pin.addEventListener('click', () => {
-  document.querySelector('.grid').style = "grid-template-columns: auto 2px 100px;"
-})
+// pin.addEventListener('click', () => {
+//   document.querySelector('.grid').style = "grid-template-columns: auto 2px 100px;"
+// })
 
 
 
