--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ it reappears, and then when typing again, it disappears
 need to do js mouse down event, and then disable, transition, then mouse up */
 .grid:has(.gutter-col-1:active) {
   transition: 0s !important;
-  background-color: blueviolet;
-
+  /* background-color: rgba(208, 202, 214, 0.197);
+  border-radius: 6px; */
   /* grid-template-columns: auto 2px 100px !important; */
 }
 
