--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@ h5 {
 <script>
 
 Split({
+  minSize: 80,
     columnGutters: [{
         track: 1,
         element: document.querySelector('.gutter-col-1'),
