--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@ noteditor {
     src: url(DTNightingale-Light.ttf);
 }
 
+@font-face {
+    font-family: Vercetti;
+    src: url(Vercetti-Regular.ttf);
+}
+
 h1 {
     font-family: Nightingale;
     color: black;
@@ -164,7 +169,9 @@ h5 {
 
   <noteditor id="editor"><body>
     <div style="height: 24px; display: flex; justify-content: end; padding-right: 10px;">
-      <span id="pin">hi</span>
+      <span id="filenamepin" style="color: rgb(109, 102, 102); 
+      font-family: Vercetti; font-size: small;
+      padding-top: 4px;">hi</span>
     </div>
     
    
