--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@ h5 {
 
 Split({
   minSize: 80,
+  snapOffset: 0,
     columnGutters: [{
         track: 1,
         element: document.querySelector('.gutter-col-1'),
