--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
 
 <style>
 
+nodebutton {
+  display: flex;
+  font-size: small;
+  border-radius: 0.5rem;
+  color: white;
+  width: fit-content;
+  padding: 4px 8px 4px 8px;
+  margin-top: 2px;
+  margin-left: 2px;
+  margin-bottom: 2px;
+  font-family: Vercetti;
+
+  /* text-align: center; */
+}
+
+nodebutton:hover {
+  background-color: rgba(255, 255, 255, 0.115);
+  cursor: pointer;
+}
+
 .grid {
   transition: 300ms;
   /* animation-delay: 2s; */
@@ -171,7 +191,7 @@ h5 {
     <div style="height: 24px; display: flex; justify-content: end; padding-right: 10px;">
       <span id="filenamepin" style="color: rgb(109, 102, 102); 
       font-family: Vercetti; font-size: small;
-      padding-top: 4px;">hi</span>
+      padding-top: 4px; cursor: pointer;">hi</span>
     </div>
     
    
