--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ nodebutton {
   margin-left: 2px;
   margin-bottom: 2px;
   font-family: Vercetti;
+  user-select: none;
 
   /* text-align: center; */
 }
