--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ nodebutton {
   width: fit-content;
   padding: 4px 8px 4px 8px;
   margin-top: 2px;
-  margin-left: 2px;
+  margin-left: 4px;
   margin-bottom: 2px;
   font-family: Vercetti;
   user-select: none;
@@ -276,10 +276,9 @@ h5 {
   <div class="gutter-col gutter-col-1"></div>
 
   <div id="pane" style="  -webkit-app-region: none;">
-    hi dog
 
-    <button type="button" id="btn">Open a File</button>
-    File path: <strong id="filePath"></strong>
+    <nodebutton type="button" id="btn">Open a Folder</nodebutton>
+    <strong id="filePath"></strong>
 
   </div>
 
