--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@ noteditor {
   -webkit-app-region: none;
   background-color: #f8f5eb;
   /* background-color: #ede8d6; */
+  
+  /* max-width: 400px; NEED TO make this a variable */
 
 
   /* padding-bottom: 4rem; */
