--- a/markzuck/page.html
+++ b/markzuck/page.html
@@ -264,7 +264,7 @@ Works like a charm!</textarea>
     .CodeMirror-wrap pre.CodeMirror-line-like {
       word-wrap: break-word;
       white-space: pre-wrap;
-      word-break: normal;
+      word-break: break-all;
     }
 
     .CodeMirror-linebackground {
