--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ h5 {
   </body></noteditor>
   <div class="gutter-col gutter-col-1"></div>
 
-  <div id="pane" style=" overflow-y:auto; max-height: 96vh;  -webkit-app-region: none; ">
+  <div id="pane" style=" overflow-y:auto; max-height: calc(100vh - 24px);  -webkit-app-region: none; ">
 
     <nodebutton type="button" id="btn">Open a Folder</nodebutton>
     <strong id="filePath"></strong>
