--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ h5 {
     <div style="height: 24px; display: flex; justify-content: end; padding-right: 10px;">
       <span id="filenamepin" style="color: rgb(109, 102, 102); 
       font-family: Vercetti; font-size: small;
-      padding-top: 4px; cursor: pointer;">hi</span>
+      padding-top: 4px; cursor: pointer;">*</span>
     </div>
     
    
