--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ h5 {
     <div style="height: 24px; display: flex; justify-content: end; padding-right: 10px; -webkit-app-region: drag;">
       <span id="filenamepin" style="color: rgb(109, 102, 102); 
       font-family: Vercetti; font-size: small;
-      padding-top: 4px; cursor: pointer; -webkit-app-region: no-drag;"></span>
+      padding-top: 4px; cursor: pointer; -webkit-app-region: no-drag;">•</span>
     </div>
     
    
