--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@ nodebutton {
   font-size: small;
   border-radius: 0.5rem;
   color: white;
-  width: fit-content;
-  padding: 4px 8px 4px 8px;
+  width: 100%;
+  max-width: 90%;
+  padding: 4px 0 4px 8px;
   /* margin-top: 2px; */
   margin-left: 4px;
   /* margin-bottom: 2px; */
@@ -31,6 +32,8 @@ nodebutton {
 nodebutton:hover {
   background-color: rgba(255, 255, 255, 0.115);
   cursor: pointer;
+  padding: 4px 8px 4px 8px;
+  width: auto;
 }
 
 nodebutton:active {
@@ -284,7 +287,7 @@ h5 {
   </body></noteditor>
   <div class="gutter-col gutter-col-1"></div>
 
-  <div id="pane" style=" overflow-y:auto; max-height: calc(100vh - 24px); ">
+  <div id="pane" style=" overflow-y:auto; max-height: calc(100vh - 24px); -webkit-app-region: no-drag; ">
 
     <nodebutton type="button" id="btn">Open a Folder</nodebutton>
     <strong id="filePath"></strong>
